--- a/BookApp/BookPro/BookPro.csproj
+++ b/BookApp/BookPro/BookPro.csproj
@@ -6,8 +6,13 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+	  <PublishSingleFile>true</PublishSingleFile>
+	  <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+	  <!-- 对于 x64 版本 -->
+	  <SelfContained>true</SelfContained>
+	  <!-- 将所有依赖包含在单个文件中 -->
+	  <IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.0-preview.7.24405.4" />
