--- a/MicroSoftware_Demo1/Properties/launchSettings.json
+++ b/MicroSoftware_Demo1/Properties/launchSettings.json
@@ -5,6 +5,15 @@
       "launchBrowser": true,
       "launchUrl": "http://127.0.0.1:5001/index.html",
       "applicationUrl": "http://0.0.0.0:5001"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/index.html",
+      "environmentVariables": {
+        "ASPNETCORE_HTTP_PORTS": "8080"
+      },
+      "publishAllPorts": true
     }
   }
 }
