--- a/MiscoSoftware_Demo2/MiscoSoftware_Demo2.csproj
+++ b/MiscoSoftware_Demo2/MiscoSoftware_Demo2.csproj
@@ -5,6 +5,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\MicroSoftware_Demo1</DockerfileContext>
   </PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Consul" Version="1.7.14.6" />
