便利贴项目

--- a/DocuEncoding/DocuEncoding.csproj
+++ b/DocuEncoding/DocuEncoding.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="223456.txt">
+    <None Update="间客.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
