--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ obj/
 bin/
 Debug/
 
+/Notes.APP/Properties/PublishProfiles/ClickOnceProfile.pubxml
+/Notes.APP/Properties/PublishProfiles/ClickOnceProfile.pubxml.user
