--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ Debug/
 
 /Notes.APP/Properties/PublishProfiles/ClickOnceProfile.pubxml
 /Notes.APP/Properties/PublishProfiles/ClickOnceProfile.pubxml.user
+/DocuEncoding/天命反派：我，拒绝退婚！.txt
+/DocuEncoding/重生1993，暗海.txt
+/DocuEncoding/间客.txt
