--- a/DocuEncoding/DocuEncoding.csproj
+++ b/DocuEncoding/DocuEncoding.csproj
@@ -12,7 +12,16 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="间客.txt">
+    <None Update="天命反派：我，拒绝退婚！.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="灭运图录.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="谁让他当鬼差的？.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="重生1993，暗海.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
