--- a/Notes.APP/Notes.APP/Notes.APP.csproj
+++ b/Notes.APP/Notes.APP/Notes.APP.csproj
@@ -76,6 +76,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Update="TimePickerWindow.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
