--- a/BookApp/BookPro/BookPro.csproj
+++ b/BookApp/BookPro/BookPro.csproj
@@ -12,8 +12,14 @@
 	  <SelfContained>true</SelfContained>
 	  <!-- 将所有依赖包含在单个文件中 -->
 	  <IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
+	  <ApplicationIcon>game64.ico</ApplicationIcon>
   </PropertyGroup>
+
   <ItemGroup>
+    <Content Include="game64.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="ChineseConverter" Version="1.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.0-preview.7.24405.4" />
   </ItemGroup>
